; ModuleID = '/home/carl/AnghaBench/kphp-kdb/statsx/extr_statsx-data.c_check_version.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/statsx/extr_statsx-data.c_check_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.counter = type { i32, %struct.counter* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_version(i64 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.counter*, align 8
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i64, i64* %4, align 8
  %8 = call %struct.counter* @get_counter_f(i64 %7, i32 0)
  store %struct.counter* %8, %struct.counter** %6, align 8
  br label %9

9:                                                ; preds = %26, %2
  %10 = load %struct.counter*, %struct.counter** %6, align 8
  %11 = icmp ne %struct.counter* %10, null
  br i1 %11, label %12, label %30

12:                                               ; preds = %9
  %13 = load %struct.counter*, %struct.counter** %6, align 8
  %14 = getelementptr inbounds %struct.counter, %struct.counter* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load i32, i32* %5, align 4
  %17 = icmp slt i32 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %31

19:                                               ; preds = %12
  %20 = load %struct.counter*, %struct.counter** %6, align 8
  %21 = getelementptr inbounds %struct.counter, %struct.counter* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = load i32, i32* %5, align 4
  %24 = icmp eq i32 %22, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %19
  store i32 1, i32* %3, align 4
  br label %31

26:                                               ; preds = %19
  %27 = load %struct.counter*, %struct.counter** %6, align 8
  %28 = getelementptr inbounds %struct.counter, %struct.counter* %27, i32 0, i32 1
  %29 = load %struct.counter*, %struct.counter** %28, align 8
  store %struct.counter* %29, %struct.counter** %6, align 8
  br label %9

30:                                               ; preds = %9
  store i32 -1, i32* %3, align 4
  br label %31

31:                                               ; preds = %30, %25, %18
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local %struct.counter* @get_counter_f(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
